@@ -22,7 +22,7 @@ RemoveObsoletes=yes
 ForcedObsoletes=esound, esound-common, slocate, ksplash-engine-moodin
 # we remove xorg-driver-fglrx and friends here and use the xorg-fixup-intrpid
 # script to modify xorg.conf after the upgrade finished
-PostUpgradeRemove=xorg-driver-fglrx, xorg-driver-fglrx-envy
+#PostUpgradeRemove=xorg-driver-fglrx, xorg-driver-fglrx-envy
 PostInstallScripts=./xorg_fix_intrepid.py
 # example rule
 #PostUpgrade{Install,Remove,Purge}=evms
