@@ -1,9 +1,13 @@
 update-manager (1:0.93.25) UNRELEASED; urgency=low
 
+  [ Jonathan Riddell ]
   * DistUpgrade/DistUpgradeQuirks.py:
     - Fix crash from not having gettext imported
+  
+  [ Michael Vogt ]
+  * revert the fglrx->ati transition (LP: #247376)
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 14 Oct 2008 22:19:14 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Oct 2008 10:03:04 +0200
 
 update-manager (1:0.93.24) intrepid; urgency=low
 
